--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -26,8 +26,8 @@ header {
 }
 
 .margin {
-    width: 80%;
-    margin: 0% 0% 0% 10%;
+    width: 70%;
+    margin: 0% 0% 0% 15%;
 }
 
 .picture {
@@ -121,13 +121,13 @@ main {
     list-style-type: none;
 }
 
-.skills {
-    margin-bottom: 10px;
-}
-
 .skillItem h3 {
     display: inline-block;
-    margin: 0;
+    margin: 3px 0px;
+}
+
+.skillItem div {
+    margin: 6px 0px;
 }
 
 .skillItem div, .skillItem div i {
@@ -138,7 +138,7 @@ main {
     clear: both;
 }
 .eduItem h2, div h4, p{
-    margin: 0;
+    margin: 5px 0px;
 }
 
 .eduItem i, .eduItem p, .lanItem i, .lanItem p, .eduItem h4, .lanItem h4, .expItem h4, .expItem i{
@@ -146,7 +146,7 @@ main {
 }
 
 .lanItem h2, div h4, p{
-    margin: 0;
+    margin: 5px 0px;
 }
 
 .achievements ul , .achievements h2 , .achievements p{
@@ -155,4 +155,8 @@ main {
 
 .proyects h2, .proyects div {
     margin: 0;
+}
+
+.proItem p {
+    margin: 10px 0px;
 }
