--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -20,7 +20,7 @@ a:visited{
 
 header {
     margin: -10px -10px 0px -10px;
-    padding-top: 50px;
+    padding-top: 70px;
     /*background-color: #313A40;*/
     color: #1A2226;
 }
@@ -45,7 +45,7 @@ img {
 
 .frontInfo {
     height: 200px;
-    margin-left: 250px;
+    margin-left: 0px;
     padding: 20px 0px 0px 0px;
 }
 
@@ -103,7 +103,7 @@ main {
     width: 55%;
     height: auto;
     padding: 0% 5% 0% 0%;
-    margin-bottom: 100px;
+    margin-bottom: 130px;
 }
 
 .rightSide {
@@ -116,9 +116,12 @@ main {
     margin: 0;
 }
 
-.expItemInfo li, .expItemInfo i {
-    display: inline-block;
-    list-style-type: none;
+.expItem ul li h4, .expItem ul li p {
+    margin: 0;
+} 
+
+.expItem ul li {
+    margin: 10px 0px;
 }
 
 .skillItem h3 {
